--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Lilita+One&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -79,44 +83,92 @@
         <div class="kotakright">
           <h2>Work</h2>
           <div class="content">
-            <h3>Hyppe</h3>
-            <p style="margin-bottom: 16px; color: #15796e; font-weight: 800">
-              Project Manager
+            <h3>Project Manager</h3>
+            <p class="company">@Hyppe</p>
+            <p>
+              Led creative cross-functional team in project implementation and
+              work closely multiple teams during product development processes.
+              Actively collaborates with marketers, designers, and developers to
+              carry out user-centric product initiatives.
             </p>
-            <p style="margin-bottom: 16px">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui
-              inventore vero nulla eos minima! Molestias, aliquid quam aperiam
-              quasi exercitationem sapiente ullam, voluptate vero enim, ad porro
-              mollitia. Nam, blanditiis!
+
+            <p>
+              Sucessfully increased number of active users significantly by
+              creating high user satisfaction through CRM system and
+              Gamification that led to an increase in 96% DAU, 43% in WAU, 80.5%
+              retention time, and 28.4% increased session engagements.
+            </p>
+
+            <p>
+              Worked closely with R&D team to analyze app performances with
+              data-driven insights to optimize product & marketing intiatives.
+              Always ensure feasible continuous improvement that aligns with
+              customer preferences and evolving market dynamics.
+            </p>
+
+            <p>
+              Conduct data-driven analysis through app performance datas and
+              trending market research to satisfy customer wants and needs by
+              identifying trends, consumer behaviors, and competitor landscapes.
             </p>
           </div>
           <div class="content">
-            <h3>Kamubisa.id</h3>
-            <p style="margin-bottom: 16px; color: #15796e; font-weight: 800">
-              Content Manager
+            <h3>Content Manager</h3>
+            <p class="company">@Kamubisa.id</p>
+            <p>
+              Successfully lead publishing team to publish several articles on
+              news sites including Sindonews, Tribunnews, and Indoposco.
             </p>
-            <p style="margin-bottom: 10px">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui
-              inventore vero nulla eos minima! Molestias, aliquid quam aperiam
-              quasi exercitationem sapiente ullam, voluptate vero enim, ad porro
-              mollitia. Nam, blanditiis!
+            <p>
+              Build and pitch creative content frameworks for shareholders and
+              stakeholders. Including; Market analysis, UVP, Target
+              segmentation, Competitors Analysis, Product Positioning, Marketing
+              & Content Plan, as well as Operational Objectives. Create content
+              strategy including tracking and analyzing content engagements,
+              manage content distributions, create promotional contents, ensure
+              content quality, conduct market analysis, and work closely with
+              stakeholders and designers.
             </p>
           </div>
 
           <h2>Projects</h2>
           <div class="content">
-            <h3>Airbnb Manager</h3>
-            <p style="margin-bottom: 16px; color: #15796e; font-weight: 800">
-              Property Manager
+            <h3>Property Manager</h3>
+            <p class="company">Airbnb Manager</p>
+            <p>
+              Manage and oversee all apartement units processes from listing to
+              end-user bookings. Handles all guest bookings management
+              (inquiries, reservations, and communications), check-in and
+              check-out coordination (walkthroughs), and property management
+              (inventories, guest supplies, security, and damage control).
+              Optimize listings through professional photography, pricing
+              strategies, and discounts, while also handling marketing through
+              media channels. Including financial managements (income, expenses,
+              booking trends, profit optimization) and enhance guest experiences
+              with local recommendations, house rules, and other personalized
+              services.
             </p>
-            <p style="margin-bottom: 10px">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui
-              inventore vero nulla eos minima! Molestias, aliquid quam aperiam
-              quasi exercitationem sapiente ullam, voluptate vero enim, ad porro
-              mollitia. Nam, blanditiis!
+            <p>
+              Managed to gained more than 200+ guest bookings per units per
+              year, managed to receive Guest Favorite title on Airbnb with 4.9
+              Star ratings and 97% positive reviews
             </p>
           </div>
           <h2>Education</h2>
+          <div class="content">
+            <h3 style="margin-bottom: 18px">James Cook University</h3>
+            <p class="company" style="margin-bottom: 0px">
+              Bachelor's Degree <br />
+            </p>
+            <p>Majoring in International Business and Marketing</p>
+
+            <p class="company" style="margin-bottom: 0px">
+              Master's Degree <br />
+            </p>
+            <p>
+              Mastering in Business Administration [With Honors / Distinction]
+            </p>
+          </div>
         </div>
       </div>
     </div>
