--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 
           <div class="contt">
             <img
-              onclick="openModal('./pics/DIN.jpeg')"
+              onclick="openModal('./pics/DIN.jpg')"
               src="./pics/DIN.jpeg"
               alt="Nadine"
               class="nadine"
             />
             <img
-              onclick="openModal('./pics/DIN2.jpeg')"
+              onclick="openModal('./pics/DIN2.jpg')"
               src="./pics/DIN2.jpeg"
               alt="Nadine"
               class="nadine"
             />
             <img
-              onclick="openModal('./pics/DIN3.jpeg')"
+              onclick="openModal('./pics/DIN3.jpg')"
               src="./pics/DIN3.jpeg"
               alt="Nadine"
               class="nadine"
@@ -82,17 +82,17 @@
             <div class="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item slide">
-                  <div onclick="openModal('./pics/DIN.jpeg')">
+                  <div onclick="openModal('./pics/DIN.jpg')">
                     <img src="./pics/DIN.jpeg" alt="Din" />
                   </div>
                 </div>
                 <div class="carousel-item slide">
-                  <div onclick="openModal('./pics/DIN2.jpeg')">
+                  <div onclick="openModal('./pics/DIN2.jpg')">
                     <img src="./pics/DIN2.jpeg" alt="DIN isap" />
                   </div>
                 </div>
                 <div class="carousel-item slide">
-                  <div onclick="openModal('./pics/DIN3.jpeg') ">
+                  <div onclick="openModal('./pics/DIN3.jpg') ">
                     <img src="./pics/DIN3.jpeg" alt="Din senyum" />
                   </div>
                 </div>
