--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
           <div class="contt">
             <img
               onclick="openModal('./pics/DIN.jpg')"
-              src="./pics/DIN.jpeg"
+              src="./pics/DIN.jpg"
               alt="Nadine"
               class="nadine"
             />
             <img
               onclick="openModal('./pics/DIN2.jpg')"
-              src="./pics/DIN2.jpeg"
+              src="./pics/DIN2.jpg"
               alt="Nadine"
               class="nadine"
             />
             <img
               onclick="openModal('./pics/DIN3.jpg')"
-              src="./pics/DIN3.jpeg"
+              src="./pics/DIN3.jpg"
               alt="Nadine"
               class="nadine"
             />
@@ -83,17 +83,17 @@
               <div class="carousel-inner">
                 <div class="carousel-item slide">
                   <div onclick="openModal('./pics/DIN.jpg')">
-                    <img src="./pics/DIN.jpeg" alt="Din" />
+                    <img src="./pics/DIN.jpg" alt="Din" />
                   </div>
                 </div>
                 <div class="carousel-item slide">
                   <div onclick="openModal('./pics/DIN2.jpg')">
-                    <img src="./pics/DIN2.jpeg" alt="DIN isap" />
+                    <img src="./pics/DIN2.jpg" alt="DIN isap" />
                   </div>
                 </div>
                 <div class="carousel-item slide">
                   <div onclick="openModal('./pics/DIN3.jpg') ">
-                    <img src="./pics/DIN3.jpeg" alt="Din senyum" />
+                    <img src="./pics/DIN3.jpg" alt="Din senyum" />
                   </div>
                 </div>
               </div>
