--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
           </h1>
           <div class="icon">
             <div>
-              <a href="mailto:serevinanadine@gmail.com">
+              <a href="https://sg.linkedin.com/in/nadineserevina">
                 <img
                   style="padding-top: 2px"
                   class="icons"
-                  src="./pics/google.svg"
+                  src="./pics/linkedin.svg"
                   alt="Gmail"
                 />
               </a>
             </div>
             <div>
-              <a href="https://www.instagram.com/afronadine/"
-                ><img class="icons" src="./pics/instagram.svg" alt="IG"
+              <a href="https://api.whatsapp.com/send?phone=19094535307"
+                ><img class="icons" src="./pics/whatsapp.svg" alt="IG"
               /></a>
             </div>
             <br />
             <div>
-              <a href="https://sg.linkedin.com/in/nadineserevina"
-                ><img class="icons" src="./pics/linkedin.svg" alt="LII"
+              <a href="mailto:serevinanadine@gmail.com"
+                ><img class="icons" src="./pics/email.svg" alt="LII"
               /></a>
             </div>
           </div>
