--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           </h1>
           <div class="icon">
             <div>
-              <a href="https://sg.linkedin.com/in/nadineserevina">
+              <a href="https://sg.linkedin.com/in/">
                 <img
-                  style="padding-top: 2px"
+                  style="padding-top: 2px; width: 40px"
                   class="icons"
                   src="./pics/linkedin.svg"
                   alt="Gmail"
@@ -37,13 +37,21 @@
             </div>
             <div>
               <a href="https://api.whatsapp.com/send?phone=19094535307"
-                ><img class="icons" src="./pics/whatsapp.svg" alt="IG"
+                ><img
+                  style="width: 40px"
+                  class="icons"
+                  src="./pics/whatsapp.svg"
+                  alt="IG"
               /></a>
             </div>
             <br />
             <div>
               <a href="mailto:serevinanadine@gmail.com"
-                ><img class="icons" src="./pics/email.svg" alt="LII"
+                ><img
+                  style="width: 40px"
+                  class="icons"
+                  src="./pics/email.svg"
+                  alt="LII"
               /></a>
             </div>
           </div>
