--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </h1>
           <div class="icon">
             <div>
-              <a href="https://sg.linkedin.com/in/">
+              <a href="https://www.linkedin.com/in/nadineserevina?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
                 <img
                   style="padding-top: 2px; width: 40px"
                   class="icons"
